# maintainer-safe-ops

./: .gitignore  .maintainer-safe-ops.json  ADOPTERS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  publish-pypi.yml  release-check.yml  scorecard.yml
docs/: 90_DAY_MAINTENANCE_PLAN.md  HEALTH_METRICS.md  REAL_WORLD_USAGE.md  RELEASE_CHECKLIST.md  SECURITY_BASELINE.md  USAGE_JA.md
examples/: consumer-workflow.yml
examples/clean-project/: README.md  app.py
examples/risky-project/: .env.example  README.md  deploy.sh
examples/risky-project/.github/workflows/: risky.yml
src/maintainer_safe_ops/: cli.py  formatters.py  rules.py  sarif.py  scanner.py
tests/: test_cli.py  test_config.py  test_formatters.py  test_sarif.py  test_scanner.py
