[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "maintainer-safe-ops"
version = "0.1.5"
description = "CLI and GitHub Action for safer open-source maintainer workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rein" }]
keywords = [
  "oss",
  "security",
  "secrets",
  "github-actions",
  "sarif",
  "maintainer-tools",
  "cli"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0"
]

[project.urls]
Homepage = "https://github.com/rein051521/maintainer-safe-ops"
Repository = "https://github.com/rein051521/maintainer-safe-ops"
Issues = "https://github.com/rein051521/maintainer-safe-ops/issues"
Changelog = "https://github.com/rein051521/maintainer-safe-ops/blob/main/CHANGELOG.md"

[project.scripts]
maintainer-safe-ops = "maintainer_safe_ops.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maintainer_safe_ops"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
